fix subtitle width on mobile

--- a/docs/_sass/minima/_typography.scss
+++ b/docs/_sass/minima/_typography.scss
@@ -15,7 +15,7 @@
         letter-spacing: .1rem;
         font-size: 1rem;
         line-height: 1rem;
-        width: 450px;
+        max-width: 450px;
         display: inline-block;
     }
 
